{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 10,
  "lineage": "555e200c-c840-50b1-3de4-deb207cace99",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b7d867c907452c",
            "arn": "arn:aws:ec2:us-east-1:767398128098:instance/i-0353d04b55fd57236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0353d04b55fd57236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-us1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bdff8c44b34eb1f2",
            "private_dns": "ip-172-31-87-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.68",
            "public_dns": "ec2-54-165-68-253.compute-1.amazonaws.com",
            "public_ip": "54.165.68.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09cb96a659739f30e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "basic-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037585be819ce394b",
            "tags": {
              "Name": "application_svr-us-east-1a"
            },
            "tags_all": {
              "Name": "application_svr-us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b78ae694d28fa90c"
            ]
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "data.aws_ami.ami_content",
            "data.aws_availability_zones.cont-2",
            "data.aws_ec2_instance_type_offerings.xyz"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b7d867c907452c",
            "arn": "arn:aws:ec2:us-east-1:767398128098:instance/i-0fb37c77fa3503d7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb37c77fa3503d7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-us1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c86f67e39d965c96",
            "private_dns": "ip-172-31-24-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.67",
            "public_dns": "ec2-34-235-165-232.compute-1.amazonaws.com",
            "public_ip": "34.235.165.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-048de1e541585beb9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "basic-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0235c525201f1c996",
            "tags": {
              "Name": "application_svr-us-east-1b"
            },
            "tags_all": {
              "Name": "application_svr-us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b78ae694d28fa90c"
            ]
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "data.aws_ami.ami_content",
            "data.aws_availability_zones.cont-2",
            "data.aws_ec2_instance_type_offerings.xyz"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b7d867c907452c",
            "arn": "arn:aws:ec2:us-east-1:767398128098:instance/i-08a2da8b5b868d430",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a2da8b5b868d430",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-us1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf1856195daa9285",
            "private_dns": "ip-172-31-35-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.14",
            "public_dns": "ec2-98-81-10-61.compute-1.amazonaws.com",
            "public_ip": "98.81.10.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0221deca0fbacbeec",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "basic-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae8876846ef7a79f",
            "tags": {
              "Name": "application_svr-us-east-1c"
            },
            "tags_all": {
              "Name": "application_svr-us-east-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b78ae694d28fa90c"
            ]
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "data.aws_ami.ami_content",
            "data.aws_availability_zones.cont-2",
            "data.aws_ec2_instance_type_offerings.xyz"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b7d867c907452c",
            "arn": "arn:aws:ec2:us-east-1:767398128098:instance/i-080d3adc9506465dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080d3adc9506465dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-us1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d39e5ac5b6e5d7a6",
            "private_dns": "ip-172-31-1-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.52",
            "public_dns": "ec2-3-235-153-72.compute-1.amazonaws.com",
            "public_ip": "3.235.153.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00617765ac0855eb9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "basic-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb16a8906522f0bb",
            "tags": {
              "Name": "application_svr-us-east-1d"
            },
            "tags_all": {
              "Name": "application_svr-us-east-1d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b78ae694d28fa90c"
            ]
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "data.aws_ami.ami_content",
            "data.aws_availability_zones.cont-2",
            "data.aws_ec2_instance_type_offerings.xyz"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b7d867c907452c",
            "arn": "arn:aws:ec2:us-east-1:767398128098:instance/i-061710436932b33e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061710436932b33e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-us1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec5aa7377cee128e",
            "private_dns": "ip-172-31-67-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.67.138",
            "public_dns": "ec2-3-238-200-45.compute-1.amazonaws.com",
            "public_ip": "3.238.200.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02aded3edc2bcebfa",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "basic-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd8d37e2adc23317",
            "tags": {
              "Name": "application_svr-us-east-1f"
            },
            "tags_all": {
              "Name": "application_svr-us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b78ae694d28fa90c"
            ]
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "data.aws_ami.ami_content",
            "data.aws_availability_zones.cont-2",
            "data.aws_ec2_instance_type_offerings.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398128098:security-group/sg-0b78ae694d28fa90c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0b78ae694d28fa90c",
            "ingress": [],
            "name": "basic-sg",
            "name_prefix": "",
            "owner_id": "767398128098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-sg"
            },
            "tags_all": {
              "Name": "basic-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8473efe1fe96df5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398128098:security-group-rule/sgr-095bb6a2685846b1f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-095bb6a2685846b1f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b78ae694d28fa90c",
            "security_group_rule_id": "sgr-095bb6a2685846b1f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.basic-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "basic-sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398128098:security-group-rule/sgr-090a6befa95464bc1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-090a6befa95464bc1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b78ae694d28fa90c",
            "security_group_rule_id": "sgr-090a6befa95464bc1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.basic-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "basic-sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398128098:security-group-rule/sgr-086cce4b2d73068cd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-086cce4b2d73068cd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b78ae694d28fa90c",
            "security_group_rule_id": "sgr-086cce4b2d73068cd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.basic-sg"
          ]
        }
      ]
    }
  ]
}